<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/black"
    android:padding="10dp"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sky_blue"
        app:title="@string/app_name" />



   <LinearLayout
       android:orientation="vertical"
       android:gravity="center"
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:id="@+id/inputTv"
           android:layout_marginTop="5dp"
           android:importantForAutofill="no"
           android:textAlignment="textEnd"
           android:textSize="45sp"
           android:textColor="@color/white"
           android:textStyle="bold|normal"
           android:background="@color/black"
           android:maxLines="1"
           android:enabled="false"
           android:layout_width="match_parent"
           android:layout_height="65dp"
           android:hint="@string/_0"
           tools:ignore="LabelFor,TextFields" />
       <EditText
           android:id="@+id/outputTv"
           android:layout_marginTop="5dp"
           android:importantForAutofill="no"
           android:textAlignment="textEnd"
           android:textSize="45sp"
           android:textColor="@color/white"
           android:textStyle="bold|normal"
           android:background="@color/black"
           android:maxLines="1"
           android:enabled="false"
           android:layout_width="match_parent"
           android:layout_height="65dp"
           android:hint="@string/_0"
           tools:ignore="LabelFor,TextFields" />
   </LinearLayout>
    <View
        android:alpha=".5"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingTop="11dp"
            android:onClick="clearAll"
            android:paddingBottom="11dp"
            android:text="@string/clear"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:shapeAppearanceOverlay="@style/Button8" />

        <Button
            android:id="@+id/delete"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:shapeAppearanceOverlay="@style/Button8"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:background="#FFFEFE"
            tools:ignore="UselessParent">
            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnDivide"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/divide"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/pink"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btnMultiply"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/multiply"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/pink"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btnMinus"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/minus"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/pink"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btnPlus"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/plus"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/pink"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp"
                    />

            </TableRow>
            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_9"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_0"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btnDot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/dot"
                    android:textSize="22sp"
                    android:onClick="dotOperator"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btnEqual"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/equal"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/red"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp"
                    />

            </TableRow>
            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_5"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_6"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_7"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_8"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp"
                    />

            </TableRow>
            <TableRow
                style="?android:attr/buttonBarStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_1"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_2"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_3"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/btn4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_4"
                    android:textSize="22sp"
                    android:padding="5dp"
                    android:layout_span="1"
                    android:textStyle="bold|normal"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/yellow"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp"
                    />

            </TableRow>




        </TableLayout>



    </LinearLayout>

</LinearLayout>